# app/app/Http/Controllers/Api/TsunamiEventController.php
@@ -4,16 +4,24 @@ namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
 use App\Models\TsunamiEvent;
+use App\Http\Resources\TsunamiEventResource;
 
 class TsunamiEventController extends Controller
 {
     public function index()
     {
-        return TsunamiEvent::get();
+        return TsunamiEventResource::collection(TsunamiEvent::paginate(50));
     }
 
-    public function show($tsunami_id)
+    public function show($tsunami_event_id)
     {
-        return TsunamiEvent::find($tsunami_id);
+        $tsunami = TsunamiEvent::find($tsunami_event_id);
+        $tsunami->load([
+            'volcano',
+            'volcano_event',
+            'earthquake_event'
+        ]);
+
+        return new TsunamiEventResource($tsunami);
     }
 }
