# app/app/Http/Controllers/Api/VolcanoController.php
@@ -8,6 +8,21 @@ use App\Http\Resources\VolcanoResource;
 
 class VolcanoController extends Controller
 {
+
+    /**
+    * @OA\Get(
+    * path="/volcanoes/",
+    * summary="Get Volcanoes informations",
+    * description="Get Volcanoes paginated",
+    * operationId="getVolcanoesInfo",
+    * tags={"volcano"},
+    * @OA\Response(
+    *    response=200,
+    *    description="Success"
+    * )
+    * )
+    */
+
     public function index()
     {
         $volcanoes = Volcano::with([
@@ -18,31 +33,29 @@ class VolcanoController extends Controller
         return VolcanoResource::collection($volcanoes);
     }
 
-
-
     /**
-         * @OA\Get(
-         * path="/volcanoes/{volcano_id}",
-         * summary="Get Volcano information",
-         * description="Get Volcano",
-         * operationId="getVolcanoInfo",
-         * @OA\Parameter(
-         *          name="volcano_id",
-         *          description="ID of the volcano",
-         *          required=true,
-         *          in="path",
-         *          example="10102",
-         *          @OA\Schema(
-         *              type="string"
-         *          )
-         *      ),
-         * tags={"volcano"},
-         * @OA\Response(
-         *    response=200,
-         *    description="Success"
-         * )
-         * )
-         */
+    * @OA\Get(
+    * path="/volcanoes/{volcano_id}",
+    * summary="Get Volcano information",
+    * description="Get Volcano",
+    * operationId="getVolcanoInfo",
+    * @OA\Parameter(
+    *          name="volcano_id",
+    *          description="ID of the volcano",
+    *          required=true,
+    *          in="path",
+    *          example="10102",
+    *          @OA\Schema(
+    *              type="string"
+    *          )
+    *      ),
+    * tags={"volcano"},
+    * @OA\Response(
+    *    response=200,
+    *    description="Success"
+    * )
+    * )
+    */
  
     public function show($volcano_id)
     {
